--- a/TesteInLoco/app/build.gradle
+++ b/TesteInLoco/app/build.gradle
@@ -23,4 +23,16 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
+    // Required
+    compile 'com.inlocomedia.android:android-sdk:2.1.1'
+
+    // Required
+    compile 'com.android.support:support-v4:23.1.1'
+
+    // Required: Access GooglePlayServices advertising id
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
+
+    // Required for Notification Ads.
+    // Recommended for additional Ad targeting
+    compile 'com.google.android.gms:play-services-location:8.4.0'
 }
